[package]
name = "kvdb-memorydb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
license = "GPL-3.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
#parking_lot = "0.9.0"
kvdb = { version = "0.2", path = "../kvdb" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
