[package]
name = "kvdb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Generic key-value trait"
license = "GPL-3.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
smallvec = "1.0.0"
bytes = { package = "parity-bytes", version = "0.1", path = "../parity-bytes" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
