[package]
description = "Large fixed-size integer arithmetic"
homepage = "http://parity.io"
repository = "https://github.com/paritytech/parity-common"
license = "MIT/Apache-2.0"
name = "uint"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
readme = "README.md"
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
byteorder = { version = "1.3.2", git = "https://github.com/mesalock-linux/byteorder-sgx", default-features = false }
crunchy = { version = "0.2.2", git = "https://github.com/jasl/crunchy", default-features = false }
qc = { package = "quickcheck", version = "0.9.0", git = "https://github.com/mesalock-linux/quickcheck-sgx", optional = true }
rand = { version = "0.7.2", git = "https://github.com/mesalock-linux/rand-sgx", default-features = false, optional = true }
rustc-hex = { version = "2.0.1", git = "https://github.com/KunPengRen/rustc-hex", default-features = false }
static_assertions = "1.0.0"

[features]
default = ["std", "mesalock"]
std = ["byteorder/std", "rustc-hex/std", "crunchy/std", "mesalock"]
quickcheck = ["qc", "rand"]
mesalock = ["sgx_tstd"]

[[example]]
name = "modular"

[[test]]
name = "uint_tests"
required-features = ["std"]

[dev-dependencies]
criterion = "0.3.0"
num-bigint = "0.2.3"

[target.'cfg(unix)'.dev-dependencies]
rug = { version = "1.6.0", default-features = false, features = ["integer"] }

[[bench]]
name = "bigint"
harness = false
