[package]
name = "impl-codec"
version = "0.4.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "Parity Codec serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
parity-scale-codec = { git = "https://github.com/mesalock-linux/parity-scale-codec-sgx", default-features = false }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std", "mesalock_sgx"]
std = ["parity-scale-codec/std", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
