[package]
name = "impl-rlp"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
rlp = { version = "0.4", path = "../../../rlp", default-features = false }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std", "mesalock_sgx"]
std = ["rlp/std", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
