[package]
name = "impl-serde"
version = "0.2.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "Serde serialization support for uint and fixed hash."

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }

[dev-dependencies]
criterion = "0.3.0"
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
uint = "0.8.1"

[[bench]]
name = "impl_serde"
harness = false
